[package]
name = "ie_net"
version = "0.1.0"
authors = ["Holger Frydrych <holger@frydrych.org>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
bytes = "0.5"
anyhow = "1.0"
libflate = "1.0"
tokio = { version = "0.2", features = ["full"] }
log = "0.4"
flexi_logger = "0.15"
structopt = "0.3"
uuid = { version = "0.8", features = ["v4"] }
